--- a/md.html
+++ b/md.html
@@ -44,18 +44,20 @@
       </div>
     </div>
   </nav>
-  
-  <h1>Mailer Daemon</h1>
-  <div>
-    <h3>NOTICE 1</h3>
-    <div class="card" style="width: 18rem;">
+  <div id="header">
+  <h1 >Mailer Daemon</h1>
+  </div>
+  <div id="main-notice">
+    <div>
+    <h3 class="notice-head">NOTICE 1</h3>
+    <div class="card" style="width: 50rem;">
       <div class="card-body">
         <h5 class="card-title">Notice abc</h5>
         <p class="card-text">Here comes the body of notice.</p>
       </div>
     </div>
 
-    <div class="card" style="width:18rem;">
+    <div class="card" style="width:50rem;">
       <div class="card-body">
         <h5 class="card-title">Notice def</h5>
         <p class="card-text">Here comes the body of notice.</p>
@@ -64,15 +66,15 @@
   </div>
 
   <div>
-    <h3>NOTICE 2</h3>
-    <div class="card" style="width: 18rem;">
+    <h3 class="notice-head">NOTICE 2</h3>
+    <div class="card" style="width:50rem;">
       <div class="card-body">
         <h5 class="card-title">Notice ghi</h5>
         <p class="card-text">Here comes the body of notice.</p>
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width:50rem;">
       <div class="card-body">
         <h5 class="card-title">Notice jkl</h5>
         <p class="card-text">Here comes bodyof notice.</p>
@@ -81,20 +83,21 @@
   </div>
 
   <div>
-    <h3>NOTICE 3</h3>
-    <div class="card" style="width: 18rem;">
+    <h3 class="notice-head">NOTICE 3</h3>
+    <div class="card" style="width:50rem;">
       <div class="card-body">
         <h5 class="card-title">Notice pqr</h5>
         <p class="card-text">Here comes body of notice.</p>
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width:50rem;">
       <div class="card-body">
         <h5 class="card-title">Notice xyz</h5>
         <p class="card-text">Here comes body of notice.</p>
       </div>
     </div>
+  </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
