--- a/md.html
+++ b/md.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!--navigation bar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light"
+    style="background:linear-gradient(to right,#F9D423,#FF4E50)">
     <div class="container-fluid">
       <img src="mdlogo.jpeg" height="65px" width="65px">
-      
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link active" href="#">About Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -44,61 +46,67 @@
       </div>
     </div>
   </nav>
+  <!--header-->
+  <div class="mainpage">
   <div id="header">
-  <h1 >Mailer Daemon</h1>
+    <h1>Mailer Daemon</h1>
   </div>
+
   <div id="main-notice">
+    <!--cards-->
     <div>
-    <h3 class="notice-head">NOTICE 1</h3>
-    <div class="card" style="width: 50rem;">
-      <div class="card-body">
-        <h5 class="card-title">Notice abc</h5>
-        <p class="card-text">Here comes the body of notice.</p>
+      <h3 class="notice-head">NOTICE 1</h3>
+      <div class="card" style="width: 50rem;">
+        <div class="card-body">
+          <h5 class="card-title">Notice abc</h5>
+          <p class="card-text">Here comes the body of notice.</p>
+        </div>
+      </div>
+      <br>
+      <div class="card" style="width:50rem;">
+        <div class="card-body">
+          <h5 class="card-title">Notice def</h5>
+          <p class="card-text">Here comes the body of notice.</p>
+        </div>
       </div>
     </div>
 
-    <div class="card" style="width:50rem;">
-      <div class="card-body">
-        <h5 class="card-title">Notice def</h5>
-        <p class="card-text">Here comes the body of notice.</p>
+    <div>
+      <h3 class="notice-head">NOTICE 2</h3>
+      <div class="card" style="width:50rem;">
+        <div class="card-body">
+          <h5 class="card-title">Notice ghi</h5>
+          <p class="card-text">Here comes the body of notice.</p>
+        </div>
+      </div>
+      <br>
+      <div class="card" style="width:50rem;">
+        <div class="card-body">
+          <h5 class="card-title">Notice jkl</h5>
+          <p class="card-text">Here comes bodyof notice.</p>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <h3 class="notice-head">NOTICE 3</h3>
+      <div class="card" style="width:50rem;">
+        <div class="card-body">
+          <h5 class="card-title">Notice pqr</h5>
+          <p class="card-text">Here comes body of notice.</p>
+        </div>
+      </div>
+      <br>
+      <div class="card" style="width:50rem;">
+        <div class="card-body">
+          <h5 class="card-title">Notice xyz</h5>
+          <p class="card-text">Here comes body of notice.</p>
+        </div>
       </div>
     </div>
   </div>
-
-  <div>
-    <h3 class="notice-head">NOTICE 2</h3>
-    <div class="card" style="width:50rem;">
-      <div class="card-body">
-        <h5 class="card-title">Notice ghi</h5>
-        <p class="card-text">Here comes the body of notice.</p>
-      </div>
-    </div>
-
-    <div class="card" style="width:50rem;">
-      <div class="card-body">
-        <h5 class="card-title">Notice jkl</h5>
-        <p class="card-text">Here comes bodyof notice.</p>
-      </div>
-    </div>
   </div>
-
-  <div>
-    <h3 class="notice-head">NOTICE 3</h3>
-    <div class="card" style="width:50rem;">
-      <div class="card-body">
-        <h5 class="card-title">Notice pqr</h5>
-        <p class="card-text">Here comes body of notice.</p>
-      </div>
-    </div>
-
-    <div class="card" style="width:50rem;">
-      <div class="card-body">
-        <h5 class="card-title">Notice xyz</h5>
-        <p class="card-text">Here comes body of notice.</p>
-      </div>
-    </div>
-  </div>
-  </div>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
