--- a/md.html
+++ b/md.html
@@ -56,15 +56,15 @@
     <!--cards-->
     <div>
       <h3 class="notice-head">NOTICE 1</h3>
-      <div class="card" style="width: 50rem;">
-        <div class="card-body">
+      <div class="card" >
+        <div class="card-body" >
           <h5 class="card-title">Notice abc</h5>
-          <p class="card-text">Here comes the body of notice.</p>
+          <p class="card-text" >Here comes the body of notice.</p>
         </div>
       </div>
       <br>
-      <div class="card" style="width:50rem;">
-        <div class="card-body">
+      <div class="card">
+      <div class="card-body">
           <h5 class="card-title">Notice def</h5>
           <p class="card-text">Here comes the body of notice.</p>
         </div>
@@ -73,14 +73,14 @@
 
     <div>
       <h3 class="notice-head">NOTICE 2</h3>
-      <div class="card" style="width:50rem;">
+      <div class="card">
         <div class="card-body">
           <h5 class="card-title">Notice ghi</h5>
           <p class="card-text">Here comes the body of notice.</p>
         </div>
       </div>
       <br>
-      <div class="card" style="width:50rem;">
+      <div class="card">
         <div class="card-body">
           <h5 class="card-title">Notice jkl</h5>
           <p class="card-text">Here comes bodyof notice.</p>
@@ -90,14 +90,14 @@
 
     <div>
       <h3 class="notice-head">NOTICE 3</h3>
-      <div class="card" style="width:50rem;">
+      <div class="card" >
         <div class="card-body">
           <h5 class="card-title">Notice pqr</h5>
           <p class="card-text">Here comes body of notice.</p>
         </div>
       </div>
       <br>
-      <div class="card" style="width:50rem;">
+      <div class="card">
         <div class="card-body">
           <h5 class="card-title">Notice xyz</h5>
           <p class="card-text">Here comes body of notice.</p>
