--- a/md.html
+++ b/md.html
@@ -50,7 +50,7 @@
   </nav>
   <!--header-->
   <div class="mainpage">
-  <div id="header">
+  <div id="header-1">
     <h1>Mailer Daemon</h1>
   </div>
   
