--- a/blog.html
+++ b/blog.html
@@ -6,116 +6,90 @@
     <link rel="stylesheet" href="blog.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">    
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
 
 <body>
-    <div class="main">
-        <div class="header">
+    <!--Header-->
+       <div class="header">
             <h1 class="title">Blogs</h1>
         </div>
-        <!--<div class="slide hi-slide">
-            <div class="hi-prev"></div>
-            <div class="hi-next"></div>
+        <br>
+        <!--carousel-->
+        <div class="main-carousel" data-flickity='{"wrapAround":true,"autoPlay":true}'>
+            <div class="carousel-cell">
+                <div class="card" style="width: 20rem;">
+                    <div class="imgBx">
+                    <img src="image1.jpeg" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="card" style="width: 20rem;">
+                    <div class="imgBx">
+                    <img src="image1.jpeg" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="card" style="width: 20rem;">
+                    <div class="imgBx">
+                    <img src="image1.jpeg" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="card" style="width: 20rem;">
+                    <div class="imgBx">
+                    <img src="image1.jpeg" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="card" style="width: 20rem;">
+                    <div class="imgBx">
+                    <img src="image1.jpeg" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <ul>
-        <li>
-            <div class="card" style="width: 18rem;">
-                <img src="image1.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
-                </div>
-            </div>
 
-        </li>
-        <li>
-            <div class="card" style="width: 18rem;">
-                <img src="image2.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="card" style="width: 18rem;">
-                <img src="image3.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Readmore</a>
-                </div>
-            </div>
-    </div>
-    </li>
-    </ul>
-    <script src=""https://code.jquery.com/jquery-3.3.1.js""></script>
-    <script src="js/jquery"></script>
-    <script>
-        $('.slide').hiSlide();
-    </script>
-    <script src="blog.js"></script>
-    </div>-->
-    <div class="main-carousel" data-flickity='{"wrapAround":true,"autoPlay":true}'>
-        <div class="carousel-cell">            
-            <div class="card" style="width: 18rem;">
-            <img src="image1.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Read More</a>
-            </div>
-        </div></div>
-        <div class="carousel-cell">            
-            <div class="card" style="width: 18rem;">
-            <img src="image1.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Read More</a>
-            </div>
-        </div></div>
-        <div class="carousel-cell"> 
-        <div class="card" style="width: 18rem;">
-            <img src="image1.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Read More</a>
-            </div>
-        </div></div>
-        <div class="carousel-cell"> 
-            <div class="card" style="width: 18rem;">
-                <img src="image1.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
-                </div>
-            </div></div>
-        <div class="carousel-cell">            
-            <div class="card" style="width: 18rem;">
-            <img src="image1.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Read More</a>
-            </div>
-        </div></div>
-      </div>
-      
-    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 
 </html>
