--- a/blog.html
+++ b/blog.html
@@ -101,7 +101,7 @@
                 veritatis hic, quibusdam illum veniam quisquam, tempore laboriosam vel magnam doloribus perferendis nam
                 facilis labore corporis animi?</p>
 
-            <button id="close" onclick="closeme()">
+            <button id="close"class="card-button" onclick="closeme()">
                 close
             </button>
         </div>
