'bolg-page-edits'

--- a/blog1.html
+++ b/blog1.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BLOG PAGE</title>
         <link rel="stylesheet" href="blog1.css">
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     </head>
     <body>
         <div class="header">
             <h1 class="title">BLOGS</h1>
         </div>
+        <div class="container0">
         <div class="form">
             <form>
             <div class="content">
@@ -17,11 +20,12 @@
             <br>
             <label>Write your blog here:</label>
             <br>
-            <textarea type=" " id="blog-text" placeholder="Enter your Blog here.."></textarea>
+            <textarea id="blog-text" placeholder="Enter your Blog here.." rows=10; cols=50;></textarea>
             <br>
             <button id="add-btn">Add Blog</button>
             </div>
         </form>
         </div>
+    </div>
     </body>
 </html>
