--- a/blog1.html
+++ b/blog1.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BLOG PAGE</title>
         <link rel="stylesheet" href="blog1.css">
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light"
+        style="background:linear-gradient(to right,#F9D423,#FF4E50)">
+        <div class="container-fluid">
+          <img src="mdlogo.jpeg" height="65px" width="65px">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">About Us</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  contents
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">content 1</a></li>
+                  <li><a class="dropdown-item" href="#">content 2</a></li>
+                </ul>
+              </li>
+            </ul>
+            </div>
+        </div>
+    </nav>
+           
         <div class="header">
             <h1 class="title">BLOGS</h1>
         </div>
@@ -20,12 +51,19 @@
             <br>
             <label>Write your blog here:</label>
             <br>
-            <textarea id="blog-text" placeholder="Enter your Blog here.." rows=10; cols=50;></textarea>
+            <textarea id="blog-text" placeholder="Enter your Blog here.." rows=6; cols=50;></textarea>
             <br>
+            <label>Upload your image here:</label>
+            <input type="file" id="imageInput" accept = "image/*">
             <button id="add-btn">Add Blog</button>
             </div>
         </form>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+        <script src="blog1.js"></script>
+        </body>
     </div>
     </body>
 </html>
