--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="blog.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">        
+        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
                         the
                         card's content.</p>
                     <button class="card-button" onclick="open1(this.id)">Read More</button>
-                    <button class="like-button" onclick="like(this.id)">likes</button>
+                    <button class="like-button" onclick="like(this.id)"><i class="fas fa-heart">Like</i></button>
                 </div>
             </div>
         </div>
@@ -44,7 +45,7 @@
                         the
                         card's content.</p>
                     <button class="card-button" onclick="open1(this.id)">Read More</button>
-                    <button class="like-button" onclick="like(this.id)">likes</button>
+                    <button class="like-button" onclick="like(this.id)"><i class="fas fa-heart">Like</i></button>
                 </div>
             </div>
         </div>
@@ -59,7 +60,7 @@
                         the
                         card's content.</p>
                     <button class="card-button" onclick="open1(this.id)">Read More</button>
-                    <button class="like-button" onclick="like(this.id)">likes</button>
+                    <button class="like-button" onclick="like(this.id)"><i class="fas fa-heart">Like</i></button>
                 </div>
             </div>
         </div>
@@ -74,7 +75,7 @@
                         the
                         card's content.</p>
                     <button class="card-button" onclick="open1(this.id)">Read More</button>
-                    <button class="like-button" onclick="like(this.id)">likes</button>
+                    <button class="like-button" onclick="like(this.id)"><i class="fas fa-heart">Like</i></button>
                 </div>
             </div>
         </div>
@@ -89,7 +90,7 @@
                         the
                         card's content.</p>
                     <button class="card-button" onclick="open1(this.id)">Read More</button>
-                    <button class="like-button" onclick="like(this.id)">likes</button>
+                    <button class="like-button" onclick="like(this.id)"><i class="fas fa-heart">Like</i></button>
                 </div>
             </div>
         </div>
