--- a/blog1.html
+++ b/blog1.html
@@ -55,7 +55,9 @@
             <br>
             <label>Upload your image here:</label>
             <input type="file" id="imageInput" accept = "image/*">
+            <div class="wrap-btn1">
             <button id="add-btn">Add Blog</button>
+            </div>
             </div>
         </form>
         </div>
